--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -145,6 +145,16 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
+
+      <!-- Reports Section - All users -->
+      <ion-col size="12" size-md="6" size-lg="4">
+        <ion-card button="true" (click)="navigateTo('/animal/lastThree')">
+          <ion-card-header>
+            <ion-card-title>Ultimos 3 Animales</ion-card-title>
+          </ion-card-header>
+          <ion-card-content> Ver ultimos 3 animales creados. </ion-card-content>
+        </ion-card>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
